# multi_gpus_test

./: .gitignore  Makefile  mypy.ini  pyproject.toml  script.sh
scripts/: train.sh  train_mlp.sh  train_mlp.slurm
src/: data.py  model.py  models.py  train.py
src/data_modules/: img_data.py  vector_data.py
src/runs/: train_mlp.py
src/tests/: test_example.py
